--- a/site/backend/package.json
+++ b/site/backend/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "frontend",
+  "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.17.3",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "nodemon": "^2.0.15"
   }
 }
