--- a/site/frontend/package.json
+++ b/site/frontend/package.json
@@ -13,7 +13,12 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.7",
     "express": "^4.17.3",
+    "got": "^10.7.0",
+    "jsdom": "^16.7.0",
+    "jssoup": "^0.0.15",
     "linky": "^1.4.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.16",
+    "pupeteer": "^0.0.1",
+    "puppeteer": "^13.7.0"
   }
 }
